--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="base.css">
 </head>
-<body>
+<body class="works_on_smartphone">
     <header>
         <ul>
+            <li class="logo">&#9733;</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
         </ul>
