--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -31,6 +31,7 @@
             </div>
             <div class="pros2">
                 <h2>Learn from the pros</h2>
+                <section class="pro-section">
                 <div class="pros3">
                     <div class="pro">
                         <img src="imageresource/1.png" alt="image">
@@ -53,6 +54,7 @@
                         <p>« 24h smiles » winner 2016 - 2019</p>
                     </div>
                 </div>
+                </section>
             </div>
         </section>
     </section>
@@ -165,7 +167,7 @@
             </div>
             <button class="btn">REGISTER FOR FREE</button>
         </section>
-        <section>
+        <section class="faq">
             <h2>F.A.Q</h2>
             <div>
                 <div>
@@ -201,9 +203,9 @@
         </section>
     </main>
     <footer>
-        <section>
+        <section class="foot">
             <div>
-                <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+                <img src="imageresource/smile.png" alt="logo">
                 <div>
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
