--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -30,7 +30,7 @@
                 <button>REGISTER FOR FREE</button>
             </div>
             <div class="pros2">
-                <h2>Learn from the pros</h2>
+                <h2><span class="purple">Learn</span> from the pros</h2>
                 <section class="pro-section">
                 <div class="pros3">
                     <div class="pro">
@@ -205,7 +205,8 @@
     <footer>
         <section class="foot">
             <div>
-                <img src="imageresource/smile.png" alt="logo">
+                <img src="imageresource/smile.png" alt="logo"> 
+                <p>smileschool</p>
                 <div>
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
