--- a/headphones/8-index.html
+++ b/headphones/8-index.html
@@ -187,20 +187,6 @@
         </section>
       </footer>
     </main>
-
-    <script>
-      const hamburger = document.getElementById( 'hamburger' );
-      const navLinks = document.getElementById( 'nav-links' );
-
-      hamburger.addEventListener( 'click', () =>
-      {
-        navLinks.classList.toggle( 'active' );
-
-        // Optional: animate hamburger to X
-        hamburger.classList.toggle( 'open' );
-      } );
-    </script>
-
+    <script src="script.js"></script>
   </body>
-
 </html>
