--- a/headphones/8-index.html
+++ b/headphones/8-index.html
@@ -30,13 +30,13 @@
                 </div>
 
                 <div class="hamburger" id="hamburger">
-                  <span></span>
-                  <span></span>
-                  <span></span>
+                  <span>what we do</span>
+                  <span>our results</span>
+                  <span>contact us</span>
                 </div>
 
 
-                <div class="list">
+                <div class="list" id="nav-lists">
                   <ul>
                     <li>what we do</li>
                     <li>our results</li>
@@ -66,7 +66,7 @@
 
       </div>
 
-      <section class="what-we-do">
+      <section id="what-we-do" class="what-we-do">
 
         <div class="head-s2">
           <h2>
@@ -118,7 +118,7 @@
         </div>
       </section>
 
-      <section class="results">
+      <section id="results" class="results">
 
         <div class="testimonial">
           <h2>
