--- a/headphones/8-index.html
+++ b/headphones/8-index.html
@@ -36,7 +36,7 @@
                 </div>
 
 
-                <div class="list" id="nav-lists">
+                <div class="list" id="navLinks">
                   <ul>
                     <li>what we do</li>
                     <li>our results</li>
