--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -21,11 +21,11 @@
                   <img src="images/logo_headphones.png" alt="logo" class="logo">
                 </div>
                 <div class="list">
-                  <ul>
-                    <li>what we do</li>
-                    <li>our results</li>
-                    <li>contact us</li>
-                  </ul>
+                  <ul class="nav-list">
+                        <li class="nav-item"><a href="#what-we-do" class="nav-link">what we do</a></li>
+                        <li class="nav-item"><a href="#results" class="nav-link">our results</a></li>
+                        <li class="nav-item"><a href="#contact-section" class="nav-link">contact us</a></li>
+                    </ul>
                 </div>
 
               </div>
