--- a/headphones/8-index.html
+++ b/headphones/8-index.html
@@ -36,13 +36,14 @@
                 </div>
 
 
-                <div class="list" id="navLinks">
-                  <ul>
-                    <li>what we do</li>
-                    <li>our results</li>
-                    <li>contact us</li>
-                  </ul>
+                <div class="list">
+                   <ul class="nav-list">
+                        <li class="nav-item"><a href="#what-we-do" class="nav-link">what we do</a></li>
+                        <li class="nav-item"><a href="#results" class="nav-link">our results</a></li>
+                        <li class="nav-item"><a href="#contact-section" class="nav-link">contact us</a></li>
+                    </ul>
                 </div>
+
 
               </div>
 
@@ -159,7 +160,7 @@
 
       </section>
 
-      <section class="contact-section">
+      <section id="contact-section" class="contact-section">
         <h2>
           Contact us
         </h2>
